# pgvis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
arch/: 01-overview.md  02-core-pipeline.md  03-backends-and-dialects.md  04-surfaces.md  05-schema-cache.md  06-errors-and-config.md  07-design-decisions.md  08-future-scope.md  README.md
crates/pgvis-core/: Cargo.toml
crates/pgvis-core/src/: backend.rs  cache.rs  cache_post_process.rs  config.rs  dialect.rs  error.rs  lib.rs  preferences.rs  select_ast.rs
crates/pgvis-core/src/plan/: mod.rs  planner.rs  resolve.rs  types.rs  validate.rs
crates/pgvis-core/src/query/: call.rs  cte.rs  fragment.rs  mod.rs  mutate.rs  read.rs
crates/pgvis-core/src/query_params/: common.rs  filter.rs  logic.rs  mod.rs  order.rs  select.rs  types.rs
crates/pgvis-embed/: Cargo.toml
crates/pgvis-embed/src/: lib.rs
crates/pgvis-lib/: Cargo.toml
crates/pgvis-lib/src/: lib.rs
crates/pgvis-mcp/: Cargo.toml
crates/pgvis-mcp/src/: lib.rs  server.rs  tools.rs  transport.rs  types.rs
crates/pgvis-postgres/: Cargo.toml
crates/pgvis-postgres/src/: execute.rs  introspect.rs  lib.rs
crates/pgvis-postgres/src/introspect/: mod.rs  post_process.rs  relationships.rs  representations.rs  routines.rs  tables.rs
crates/pgvis-postgres/src/sql/: relationships.sql  representations.sql  routines.sql  tables.sql
crates/pgvis-rest/: Cargo.toml
crates/pgvis-rest/src/: lib.rs  openapi.rs  routing.rs
crates/pgvis-router/: Cargo.toml
crates/pgvis-router/src/: lib.rs  openapi.rs  response.rs  routing.rs
crates/pgvis-server/: Cargo.toml
crates/pgvis-server/src/: main.rs
crates/pgvis-server/tests/: embed.rs  errors.rs  http.rs  mutate.rs  query.rs  rpc.rs
crates/pgvis-server/tests/common/: mod.rs
crates/pgvis-server/tests/fixtures/: schema.sql  seed.sql
crates/pgvis-sqlite/: Cargo.toml
crates/pgvis-sqlite/src/: execute.rs  lib.rs  util.rs
crates/pgvis-sqlite/src/introspect/: mod.rs  relationships.rs  tables.rs
crates/pgvis-sqlite/tests/: integration.rs
crates/pgvis-sqlite/tests/fixtures/: schema.sql  seed.sql
website/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.toml
website/public/: robots.txt
website/public/styles/: blog.css  landing.css
website/src/: content.config.ts
website/src/components/: EngineDiagram.astro  Footer.astro
website/src/content/blog/: introducing-pgvis.mdx
website/src/content/docs/: installation.mdx  introduction.mdx  quickstart.mdx
website/src/content/docs/guides/: embedding.mdx  mcp.mdx  rest-api.mdx
website/src/content/docs/reference/: architecture.mdx  configuration.mdx
website/src/layouts/: Landing.astro
website/src/pages/: brand.astro  index.astro  vision.astro
website/src/pages/blog/: [slug].astro  index.astro
website/src/styles/: custom.css
