[package]
name = "pgvis-embed"
description = "Friendly facade for embedding pgvis in any Rust application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pgvis-core = { path = "../pgvis-core" }
pgvis-postgres = { path = "../pgvis-postgres" }
pgvis-router = { path = "../pgvis-router" }
axum.workspace = true
tokio.workspace = true
arc-swap.workspace = true
tracing.workspace = true
thiserror.workspace = true
