[package]
name = "pgvis-mcp"
description = "MCP (Model Context Protocol) adapter for pgvis — expose database as LLM tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pgvis-core = { path = "../pgvis-core" }
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
tracing.workspace = true
