[package]
name = "pgvis-mcp"
description = "Embeddable MCP (Model Context Protocol) server for pgvis — stdio + SSE transports"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pgvis-core = { path = "../pgvis-core" }
rmcp.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
arc-swap.workspace = true
tracing.workspace = true
thiserror.workspace = true
