[package]
name = "pgvis-router"
description = "Embeddable REST + OpenAPI router for pgvis — mount in any axum app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pgvis-core = { path = "../pgvis-core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
arc-swap.workspace = true
openapiv3.workspace = true
tracing.workspace = true
thiserror.workspace = true
