[package]
name = "pgvis-server"
description = "Standalone pgvis binary — REST, OpenAPI, MCP over Postgres/SQLite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pgvis"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
pgvis-core = { path = "../pgvis-core" }
pgvis-postgres = { path = "../pgvis-postgres" }
pgvis-rest = { path = "../pgvis-rest" }
clap.workspace = true
figment.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
