[package]
name = "pgvis-server"
description = "Standalone pgvis binary — REST, OpenAPI, MCP over Postgres/SQLite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pgvis"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
pgvis-core = { path = "../pgvis-core" }
pgvis-lib = { path = "../pgvis-lib" }
arc-swap.workspace = true
clap.workspace = true
figment.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json.workspace = true
tokio-postgres.workspace = true
pgvis-lib = { path = "../pgvis-lib" }
axum.workspace = true

[features]
default = ["mcp"]
mcp = ["pgvis-lib/mcp"]
